Example_probes/namespace_probes.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kubilab-probes
  labels:
    environment: probes
