Example_probes/policy_probes.yml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "policy-probes"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments"]
  validations:
    - expression: |
        object.spec.template.spec.containers.all(c, 
          has(c.livenessProbe) &&
          has(c.readinessProbe) &&
          has(c.startupProbe)
        )
      messageExpression: "'Kubernetes needs probes on Deployments to know when to start & restart them. Please add livenessProbe, readinessProbe and startupProbe to your Deployment.'"
