Example_probes/policy_probes_binding.yml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "policy-probes-binding"
spec:
  policyName: "policy-probes"
  validationActions: [Deny]
  matchResources:
    namespaceSelector:
      matchLabels:
        environment: probes
